flux/apps/utilities/attic-endpoint/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-attic
    namespace: attic
subsets:
    - addresses:
          - ip: 192.168.2.40
      ports:
          - name: http
            port: 8080
            protocol: TCP
