flux/apps/utilities/attic-endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-attic
    namespace: attic
spec:
    ports:
        - name: http
          port: 8080
          protocol: TCP
          targetPort: 8080
