flux/apps/utilities/attic-endpoint/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: external-attic
    namespace: attic
spec:
    parentRefs:
        - name: tls-gateway
          namespace: kube-system
    hostnames:
        - "nix.axiom.lucasfehres.nl"
    rules:
        - backendRefs:
              - name: external-attic
                port: 8080
